# swagger.yaml
@@ -281,3 +281,47 @@ paths:
         500:
           description: "Some error"
           example: { status: 500, message: "Some error message", data: null }
+  /users/{user_id}:
+    get:
+      summary: Get a user thanks to his Id
+      description: 'Used to get a user'
+      operationId: getUser
+      produces:
+        - application/json
+      parameters:
+        - name: user_id
+          in: path
+          description: Id of the user we want to list
+          required: true
+          type: string
+        - name: order_by
+          in: url
+          description: Product name
+          required: false
+          type: string
+        - name: order
+          in: url
+          description: Sort by ascending or descending value
+          required: false
+          type: string
+          examples:
+            - 'asc'
+            - 'desc'
+        - name: limit
+          in: url
+          description: Number of retured products
+          required: false
+          type: number
+      responses:
+        200:
+          description: "User Exist"
+          example: { status: 200, message: "Success", data: [ { "first_name": "Rachid", "id": "tl74u106eo", "name": "Soussi", "picture_url": "/url/2", "role": "Marchand", "uid": "dsfgjydsfkvj" } ] }
+        400:
+          description: "Bad request"
+          example: { status: 400, message: "Some error message", data: null }
+        404:
+          description: "User not found"
+          example: { status: 404, message: "User XXXX not found", data: null }
+        500:
+          description: "Some error"
+          example: { status: 500, message: "Some error message", data: null }
